--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ deploy:
   local_dir: public
   keep-history: true
   on:
-    branch: master
+    branch: development
 before_script:
   - "npm i -g gatsby"
   - "npm i"
